INCLUDE_DIRECTORIES (${gdsto3d_SOURCE_DIR}/libgdsto3d ${OPENGL_INCLUDES})
LINK_DIRECTORIES (${gdsto3d_BINARY_DIR}/libgdsto3d)

ADD_EXECUTABLE (gds2ogl gds2ogl.cpp gdsobject_ogl.cpp gdsparse_ogl.cpp)
TARGET_LINK_LIBRARIES (gds2ogl gdsto3d ${OPENGL_LIBRARIES})

INSTALL (TARGETS gds2ogl RUNTIME DESTINATION ${BINDEST})
