# $Id: Makefile.am 267 2006-05-09 15:10:07Z roger $

SUBDIRS = .

EXTRA_DIST = 

lib_LTLIBRARIES = libgdsto3d.la

include_HEADERS = gdsto3d.h

libgdsto3d_la_LIBADD = @LDADD@

libgdsto3d_la_LDFLAGS = -version-info 0:2:0

libgdsto3d_la_SOURCES =	config_cfg.cpp \
			config_cfg.h \
			gdselements.h \
			gds_globals.cpp \
			gds_globals.h \
			gdsobject.cpp \
			gdsobject.h \
			gdsobjects.cpp \
			gdsobjects.h \
			gdsparse.cpp \
			gdsparse.h \
			gdspath.cpp \
			gdspath.h \
			gdspolygon.cpp \
			gdspolygon.h \
			gdstext.cpp \
			gdstext.h \
			gds_types.h \
			process_cfg.cpp \
			process_cfg.h

#gds_types.cpp 
